samples/_failures_safe/1761596706_79b4b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c2a755a.c: In function ‘main’:
./samples/SAFE/__tmp_2c2a755a.c:140:23: error: missing terminating " character
  140 |             if (scanf("%d %
      |                       ^~~~~
./samples/SAFE/__tmp_2c2a755a.c:140:13: error: expected expression at end of input
  140 |             if (scanf("%d %
      |             ^~
./samples/SAFE/__tmp_2c2a755a.c:140:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c2a755a.c:140:13: error: expected declaration or statement at end of input
